# fittencode.nvim

./: .busted  .editorconfig  .gitignore  1  1.lua  13202506_03442 PM.docx  2  2.lua  5  Makefile  README.md  check.py  commit.bat  commit.sh  generated.lua  gushi.md  make.py  nightly  q  q.lua  runtime  test_framework.lua  test_session.txt  x.lua  x1.lua  y.lua  z.lua
.github/workflows/: ci.yml
after/ftplugin/: FittenCodeChat.vim
debug/: 11 22  3  4  a  a.lua  api  bug  cal.c  cusor.lua  e0.lua  error  error-1.txt  error-2.txt  ev.lua  ev2.lua  good-1.txt  good-2.txt  gushi-1.md  k  k0  k1  k3  k4  k5  k8  kk  q  test_event.lua  v0  v3  w
doc/: fittencode.nvim.txt
doc/http/: uri.md
docs/: 1
lua/fittencode/: _types.lua  action.lua  api.lua  auth.lua  authentication.lua  base.lua  bindings.lua  char_code.lua  chat.lua  client.lua  client2.lua  color.lua  command.lua  commands.lua  config.lua  curl.lua  editor.lua  engine.lua  extension.lua  fn.lua  format.lua  generate.lua  headless.lua  http.lua  init.lua  inline.lua  inspect.lua  key_storage.lua  language.lua  log.lua  lsp_service.lua  multi_thread_log.lua  opl.lua  p1.md  path.lua  persistence_state_manager.lua  position.lua  process.lua  promise.lua  range.lua  (+23 more)
lua/fittencode/actions/: identify_programming_language.lua  init.lua
lua/fittencode/async_hash/: init.lua
lua/fittencode/cc/projects/: CMakeLists.txt
lua/fittencode/cc/projects/hash/: .gitignore  Makefile  init.lua
lua/fittencode/cc/projects/libcurl/: .gitignore  init.lua  x.lua
lua/fittencode/cc/projects/libcurl/src/: api.cc  curl.cc
lua/fittencode/http/libcurl/: CMakeLists.txt  Makefile  cpath.lua.in  init.lua
lua/fittencode/http/libcurl/src/: api.cc  curl.cc  impl.cc  impl.h
lua/fittencode/rest/backend/libcurl/cc/curlua/: CMakeLists.txt  exports.c  implementation.cc  implementation.h
py/: fittencode.py  lua_template_generate.py  lua_template_refine.py  template_refine.py
queries/c/: fittencode.scm
queries/cpp/: fc-dep.scm
template/chat/: chat-de.rdt.md  chat-en.rdt.md  chat-en.rdt.md_bak  chat-fr.rdt.md  chat-zh-cn.rdt.md  title-chat-en.rdt.md  title-chat-zh-cn.rdt.md
template/task/: diagnose-errors-en.rdt.md  diagnose-errors-zh-cn.rdt.md  document-code-en.rdt.md  document-code-zh-cn.rdt.md  edit-code-en.rdt.md  edit-code-zh-cn.rdt.md  explain-code-en.rdt.md  explain-code-w-context.rdt.md  explain-code-zh-cn.rdt.md  find-bugs-en.rdt.md  find-bugs-zh-cn.rdt.md  generate-code-en.rdt.md  generate-code-zh-cn.rdt.md  generate-unit-test-en.rdt.md  generate-unit-test-zh-cn.rdt.md  improve-readability.rdt.md  optimize-code-en.rdt.md  optimize-code-zh-cn.rdt.md  terminal-fix-en.rdt.md  terminal-fix-zh-cn.rdt.md
tests/: assert.lua  case.lua  demo_spec.lua  init.lua  test_plugin_spec.lua  y1.lua  y4.lua
tests/chat/: model.lua  x2.lua
tests/functional/: x1.lua  y2.lua  y3.lua  y5.lua
tests/inline/: model.lua
(+524 files in other folders)
